<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailWisataActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BtnBack"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:contentDescription="TODO"
        android:src="@drawable/baseline_back_24"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-25dp"
        android:background="@drawable/bg_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNamaDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLocDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:text="@string/lokasi_loading"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/baseline_maps_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_5"
                    android:textColor="@color/black"/>

                <RatingBar
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:progressTint="@color/duskYellow"
                    android:numStars="5"
                    android:rating="5.0"/>

            </LinearLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navbar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/white"
                app:itemTextColor="@color/black"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/menu_detail" />

        </LinearLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_below="@id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tvLike"
            android:layout_below="@+id/desc"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_main"
            android:gravity="center"
            android:text="@string/like"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>